# elm-on-shuttle

./: .gitignore  Cargo.toml  Makefile  README.md  Shuttle.toml  start_dev_server.sh
dev_server/: Cargo.toml
dev_server/src/: main.rs  tracing.rs
server/: Cargo.toml  _template_Secrets.toml
server/src/: main.rs  oauth.rs  route.rs  secrets.rs  tracing.rs
server/src/route/: api.rs  oauth.rs  spa.rs
ui/: elm.json  package.json
ui/src/: GitHub.elm  MyElements.elm  Shared.elm  ToString.elm  User.elm  View.elm  interop.js
ui/src/Api/: Greeting.elm
ui/src/Pages/: Home_.elm  SignIn.elm
ui/src/Shared/: Model.elm  Msg.elm
