[workspace]
members = ["server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
axum = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
shuttle-axum = "0.39.0"
tokio = "1.36.0"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[workspace.dependencies.shuttle-runtime]
version = "0.39.0"
default-features = false # avoids initialization of shuttle's default tracing subscriber
