[package]
name = "dev_server"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
lazy_static.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
