[package]
name = "dev_server"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
http-body.workspace = true
http-body-util.workspace = true
lazy_static.workspace = true
hyper-util.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
